Revise installation instructions in README.md
detailed installation instructions for macos/linux users